--- a/sass/media.scss
+++ b/sass/media.scss
@@ -35,6 +35,9 @@
           border: none;
         }
       }
+      form{
+        display: block;
+      }
     }
   }
   .group_filter{
